8274122: java/io/File/createTempFile/SpecialTempFile.java fails in Windows 11
Reviewed-by: mbaesken
Backport-of: 4a142c3b0831d60b3d5540f58973e8ad3d1304bf